Fix for image stretch in Chrome and Safari

--- a/main.css
+++ b/main.css
@@ -318,7 +318,7 @@ a:hover, a:focus {
     }
 
     img.project-image {
-        height: 100%;
+        max-height: 100%;
         width: auto;
     }
 
